--- a/app/src/main/res/layout/fragment_doctor_profile.xml
+++ b/app/src/main/res/layout/fragment_doctor_profile.xml
@@ -5,7 +5,7 @@
     android:id="@+id/doctor_profile_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue"
+    android:background="@color/background_light_grey"
     android:orientation="vertical"
     tools:context="com.example.ecss.medicalmapper.userInterface.fragments.DoctorProfileFragment"
     tools:showIn="@layout/activity_doctor_profile">
