--- a/app/src/main/res/layout/activity_chattingsystem.xml
+++ b/app/src/main/res/layout/activity_chattingsystem.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue"
+    android:background="@color/background_light_grey"
     tools:context="com.example.ecss.medicalmapper.chattingsystem.ui.ChattingSystemActivity">
 
     <android.support.v7.widget.RecyclerView
