--- a/app/src/main/res/layout/fragment_display_search_places.xml
+++ b/app/src/main/res/layout/fragment_display_search_places.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin_16dp"
-    android:paddingLeft="@dimen/activity_horizontal_margin_16dp"
-    android:paddingRight="@dimen/activity_horizontal_margin_16dp"
-    android:paddingTop="@dimen/activity_vertical_margin_16dp"
-    tools:context="com.example.ecss.medicalmapper.userInterface.fragments.DisplaySearchPlacesFragment"
-    tools:showIn="@layout/activity_display_search_places">
+    android:background="@color/background_light_grey"
+    android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
+        android:paddingBottom="@dimen/little_space"
         android:id="@+id/search_places_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
