--- a/app/src/main/res/layout/fragment_saved_pharmacies.xml
+++ b/app/src/main/res/layout/fragment_saved_pharmacies.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue"
+    android:background="@color/background_light_grey"
     android:orientation="vertical"
     tools:context="com.example.ecss.medicalmapper.userInterface.fragments.SavedPharmaciesFragment">
 
