--- a/app/src/main/res/layout/layout_recipient_message.xml
+++ b/app/src/main/res/layout/layout_recipient_message.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/text_view_recipient_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Hi. How are you?"
-        android:padding="8dp"
-        android:textStyle="bold"
-        android:layout_marginRight="60dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="2dp"
-        android:textColor="#727272"
-        android:textSize="18sp"
-        android:background="@drawable/recipient_rounded_corners"/>
-
-</RelativeLayout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:gravity="left"
+              android:padding="@dimen/little_space"
+              android:layout_height="wrap_content">
+<TextView
+    android:layout_marginRight="@dimen/extra_large_space"
+    android:id="@+id/text_view_recipient_message"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    tools:text="Hi. How are you?"
+    android:padding="@dimen/some_space"
+    android:textStyle="bold"
+    android:textSize="@dimen/large_text_size"
+    android:textColor="@color/darker_grey"
+    android:background="@drawable/recipient_rounded_corners"/>
+</LinearLayout>
