--- a/app/src/main/res/layout/layout_sender_message.xml
+++ b/app/src/main/res/layout/layout_sender_message.xml
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+              android:gravity="right"
+              android:padding="@dimen/little_space"
     android:layout_height="wrap_content">
     <TextView
+        android:layout_marginLeft="@dimen/large_space"
         android:id="@+id/text_view_sender_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="I am doing ok"
-        android:padding="8dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="2dp"
+        android:padding="@dimen/some_space"
         android:textStyle="bold"
-        android:textSize="18sp"
-        android:textColor="#FFFFFF"
-        android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true"
-        android:background="@drawable/sender_rounded_corners"
-        android:layout_alignParentRight="true" />
-
-</RelativeLayout>
+        android:textSize="@dimen/large_text_size"
+        android:textColor="@color/white"
+        android:background="@drawable/sender_rounded_corners"/>
+</LinearLayout>
