--- a/app/src/main/res/layout/list_branch_item.xml
+++ b/app/src/main/res/layout/list_branch_item.xml
@@ -1,69 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/search_cardview"
+    android:layout_marginTop="@dimen/little_space"
+    android:layout_marginLeft="@dimen/little_space"
+    android:layout_marginRight="@dimen/little_space"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:id="@+id/search_cardview"
+    card_view:cardCornerRadius="4dp"
     android:background="@color/white"
-    card_view:cardCornerRadius="8dp">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <RelativeLayout android:layout_width="0dp"
+                        android:layout_weight="0.75"
+                        android:layout_height="match_parent">
 
             <ImageView
-                android:layout_width="75dp"
-                android:layout_height="75dp"
-                android:layout_gravity="end"
-                android:layout_margin="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
                 android:id="@+id/logob"
+                android:scaleType="centerInside"/>
 
-                />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/item_image_gradient"/>
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:background="@color/white"
+            android:paddingStart="@dimen/some_space"
+            android:paddingEnd="@dimen/little_space"
+            android:paddingTop="@dimen/some_space"
+            android:paddingBottom="@dimen/some_space"
+            android:gravity="center"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/branch_type_textview"
-                android:layout_width="wrap_content"
+                android:gravity="start"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                android:layout_gravity="end"
-                android:text="@string/clinic"
-                android:textColor="@color/dark_blue"
-                android:textSize="24sp"
-                android:layout_margin="8dp"
-                android:paddingTop="8dp"
-                android:paddingEnd="8dp"
+                android:textSize="@dimen/small_text_size"
+                android:textColor="@color/blue"/>
 
-                />
-        </RelativeLayout>
+            <TextView
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:textSize="@dimen/large_text_size"
+                android:paddingTop="@dimen/little_space"
+                android:id="@+id/place_name_textview"
+                android:gravity="start"
+                android:textColor="@color/darker_grey"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
-        <TextView
-            android:id="@+id/place_name_textview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="8dp"
-            android:textColor="#000"
-            android:textSize="24sp"
-            android:text="samuel"
-            android:gravity="center"
-            />
-        <TextView
-            android:id="@+id/specialization_textview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="8dp"
-            android:textColor="#000"
-            android:textSize="18sp"
-            android:text="samuel"
-            android:gravity="center"
-            />
+            <TextView
+                android:layout_marginTop="@dimen/little_space"
+                android:id="@+id/specialization_textview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/small_text_size"
+                android:textColor="@color/light_grey"/>
 
-
+        </LinearLayout>
     </LinearLayout>
+
+
+
+
+
 </android.support.v7.widget.CardView>
