--- a/app/src/main/res/layout/list_review_item.xml
+++ b/app/src/main/res/layout/list_review_item.xml
@@ -14,32 +14,30 @@
         card_view:cardCornerRadius="4dp">
 
         <LinearLayout
+            android:padding="@dimen/little_space"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/reviewer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:paddingStart="8dp"
-                android:paddingTop="8dp"
-                android:text="samuel "
-                android:textColor="@color/dark_blue"
-                android:textSize="24sp"
-
-                />
-
-            <TextView
-                android:id="@+id/review_desc"
+                android:gravity="start"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:paddingBottom="8dp"
-                android:text="goood goood "
-                android:textColor="#000"
-                android:textSize="24sp" />
+                android:textSize="@dimen/large_text_size"
+                android:text="Ahmad"
+                android:textColor="@color/blue"/>
+
+            <TextView
+                android:padding="@dimen/little_space"
+                android:textSize="@dimen/mid_text_size"
+                android:paddingTop="@dimen/little_space"
+                android:id="@+id/review_desc"
+                android:gravity="start"
+                android:textColor="@color/darker_grey"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
