--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <color name="colorPrimary">@color/blue</color>
     <color name="colorPrimaryDark">@color/dark_blue</color>
     <color name="colorAccent">@color/white</color>
@@ -14,7 +15,7 @@
     <color name="dark_red">#c0392b</color>
     <color name="orange">#e67e22</color>
     <color name="dark_orange">#d35400</color>
-    <color name="white">#ecf0f1</color>
+    <color name="white">#ffffff</color>
     <color name="dark_white">#bdc3c7</color>
     <color name="purple">#9b59b6</color>
     <color name="dark_purple">#8e44ad</color>
@@ -29,7 +30,61 @@
     <color name="divider">#B6B6B6</color>
     <color name="text_color">#FFFFFF</color>
     <color name="text_color_icon">#212121</color>
-    
+
+
+    <color name="background_light_grey">#dddddd</color>
+
+
+    <color name="darker_grey">#545557</color>
+    <color name="light_grey">#a0a1a5</color>
+    <color name="top">#ff7f21</color>
+    <color name="bottom">#e3711d</color>
+
+    <color name="darker_background_grey">#e6e6e6</color>
+
+    <color name="text_field_border">#e3e3e3</color>
+
+
+    <color name="special_product_card_green">#3baa35</color>
+    <color name="special_product_card_light_green">#f3fedc</color>
+    <color name="special_product_card_pink">#fc6a9c</color>
+    <color name="special_product_card_light_pink">#ffe5ea</color>
+    <color name="special_product_card_blue">#1e71b8</color>
+    <color name="special_product_card_light_blue">#dbeffa</color>
+    <color name="special_product_card_orange">#e94e1c</color>
+    <color name="special_product_card_light_orange">#fffbe2</color>
+    <color name="special_product_card_purple">#4c1d89</color>
+    <color name="special_product_card_light_purple">#f3eafd</color>
+
+    <color name="facebook_color">#3b5997</color>
+    <color name="twitter_color">#4098fd</color>
+    <color name="instagram_color">#bb2a8c</color>
+
+    <color name="button_grey">#b4b4b4</color>
+
+
+    <array name="special_product_card_foreground">
+        <item>@color/special_product_card_green</item>
+        <item>@color/special_product_card_pink</item>
+        <item>@color/special_product_card_blue</item>
+        <item>@color/special_product_card_orange</item>
+        <item>@color/special_product_card_purple</item>
+    </array>
+
+    <array name="special_product_card_background">
+        <item>@color/special_product_card_light_green</item>
+        <item>@color/special_product_card_light_pink</item>
+        <item>@color/special_product_card_light_blue</item>
+        <item>@color/special_product_card_light_orange</item>
+        <item>@color/special_product_card_light_purple</item>
+    </array>
+
+    <color name="black">#2a2b2b</color>
+
+    <color name="item_image_gradient_bottom">#334c4c4c</color>
+    <color name="item_image_gradient_top">#00000000</color>
+
+
 
 
 </resources>
