--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -4,7 +4,7 @@
     android:id="@+id/content_details"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue"
+    android:background="@color/background_light_grey"
     android:orientation="vertical"
     tools:context="com.example.ecss.medicalmapper.userInterface.fragments.DetailsFragment"
     tools:showIn="@layout/activity_details">
@@ -27,10 +27,12 @@
 
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="72dp"
+                android:layout_height="@dimen/large_space"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="24dp"
-                android:src="@drawable/app_logo" />
+                android:src="@drawable/app_logo"
+                android:background="@color/blue"
+                />
 
             <LinearLayout
                 android:layout_width="@dimen/form_element_width"
@@ -259,21 +261,25 @@
                 android:layout_margin="@dimen/activity_horizontal_margin"
                 android:orientation="horizontal">
 
-                <ImageButton
+                <Button
                     android:id="@+id/favorite_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@color/blue"
-                    android:src="@drawable/star_empty"
-                    android:visibility="gone" />
+                    android:visibility="gone"
+                    android:text="@string/save"
 
-                <ImageButton
+                    />
+
+                <Button
                     android:id="@+id/UnSaveButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@color/blue"
-                    android:src="@drawable/star_filled"
-                    android:visibility="gone" />
+                    android:visibility="gone"
+                    android:text="@string/unSaved"
+                    />
+
 
                 <ImageView
                     android:id="@+id/chat_image"
